@@ -10,8 +10,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version> <!-- Java version 17 -->
-        <javafx.version>17.0.1</javafx.version> <!-- JavaFX version 17 compatible with Java 17 -->
+        <java.version>17</java.version>
+        <javafx.version>21.0.7</javafx.version>
     </properties>
 
     <dependencies>
@@ -54,11 +54,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>main.TestFX</mainClass> <!-- Remplace par le chemin de ta classe principale -->
-                    <options>
-                        <option>--add-modules=javafx.controls,javafx.fxml</option>
-                        <option>--enable-native-access=javafx.graphics</option>
-                    </options>
+                    <mainClass>main.TestFX</mainClass> <!-- remplace par ta vraie classe principale -->
                 </configuration>
             </plugin>
         </plugins>
